# pivot-div-donchian-bot

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/pairs/: ADAUSDT.yaml  ATOMUSDT.yaml  AVAXUSDT.yaml  BCHUSDT.yaml  BNBUSDT.yaml  BTCUSDT.yaml  DOTUSDT.yaml  ETHUSDT.yaml  LINKUSDT.yaml  LTCUSDT.yaml  NEARUSDT.yaml  SOLUSDT.yaml  TRXUSDT.yaml  UNIUSDT.yaml  XRPUSDT.yaml
docs/: ARCHITECTURE.md  Developing a Pivot Divergence Strategy with Order Flow (Donchian + CVD).docx
scripts/: run_bot.ps1  run_bot.sh  run_paper.bat  run_paper.sh
src/div_donchian_bot/: cli.py  config.py  direction.py  engine.py  logging_setup.py  models.py  notifier.py  telegram_controls.py  time_utils.py  tv_bridge.py  universe.py
src/div_donchian_bot/alerts/: __init__.py  formatters.py
src/div_donchian_bot/binance/: endpoints.py  rest.py  ws.py
src/div_donchian_bot/cli/: __init__.py  __main__.py  parity_check.py  replay.py  replay_tv_webhooks.py  tv_export_to_signals.py
src/div_donchian_bot/data/: resample.py
src/pivot_div_donchian_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_delta_store.py  test_direction_gate.py  test_ema_seed_modes.py  test_formatters.py  test_kill_switches.py  test_loc_in_range.py  test_overrides.py  test_paper_executor.py  test_parity_cli.py  test_pivot_strict.py  test_pivot_tie_break_extended.py  test_replay_determinism.py  test_resample.py  test_structure_atr_trailing.py  test_tv_bridge.py  test_tv_export_to_signals.py  test_tv_option_a.py
tests/data/: bars_sample.csv  tv_signals_empty.csv
(+13 files in other folders)
